# AlphaCore

./: .env.example  .gitignore  CLAUDE.md  README.md  UPGRADES.md  diagnose_bnb_ada.py  main.py  main_real.py  new_models_result.txt  pyproject.toml  requirements.txt  run_once.py  test_cryptocompare.py  test_multisource_news.py  test_option_a.py  test_phase2.py  test_phase4.py  test_phase5.py  test_rss_only.py  vercel.json
.github/workflows/: tests.yml  trading-cycle.yml
frontend/: .env.production  .gitignore  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts  providers.tsx  types.ts  utils.ts
models_saved/: ADAUSDT_classifier_best.pt  ADAUSDT_lstm_best.pt  BNBUSDT_classifier_best.pt  BNBUSDT_lstm_best.pt  BTCUSDT_classifier_best.pt  BTCUSDT_lstm_best.pt  ETHUSDT_classifier_best.pt  ETHUSDT_lstm_best.pt  SOLUSDT_classifier_best.pt  SOLUSDT_lstm_best.pt
scripts/: backfill_pnl.py  set_validation_start.py  start-all.sh  status.sh  stop-all.sh  watchdog.sh
src/agents/: __init__.py  agent_state.py  execution_agent.py  manager_agent.py  portfolio_monitor.py  risk_agent.py
src/api/: main.py  schemas.py
src/dashboard/: app.py
src/data/: binance_client.py  binance_real_client.py  coingecko_client.py  coinmarketcap_client.py  cryptocompare_client.py  cryptocurrency_cv_client.py  cryptopanic_client.py  currents_client.py  data_pipeline.py  feature_engineer.py  (+5 more)
tests/: test_agents_isolated.py  test_failure_injection.py  test_financial_integrity.py  test_real_safety.py  test_sentiment_decay.py  test_timestamps.py
(+72 files in other folders)
